@@ -1,3 +1,9 @@
+2006-04-06  Adam Jackson  <ajax@freedesktop.org>
+
+	* configure.ac:
+	* src/citron.c:
+	Unlibcwrap.  Bump server version requirement.  Bump to 2.2.0.
+
 2006-03-01  Peter Kunzmann  <kunzmann@citron.de>
 
 	* man/citron.man:
